--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
     <p>Data from Maastricht University Digital Collections</p>
   </footer>
 
-  <script src="script.js"></script>
+  <script src="script.js?v=4"></script>
 </body>
 </html>
