--- a/index.html
+++ b/index.html
@@ -1,26 +1,53 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Maastricht Digital Memory Tree</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="style.css">
-  <script src="https://d3js.org/d3.v7.min.js"></script>
-</head>
-<body>
-  <header>
-    <h1>Maastricht Digital Memory Tree</h1>
-    <p>A living visualization of people and their shared memories</p>
-  </header>
+<div style="text-align:center;">
+  <svg id="memoryTree" width="800" height="700" viewBox="0 0 800 700" xmlns="http://www.w3.org/2000/svg">
+    <!-- Trunk -->
+    <path d="M400 650 C400 550, 400 400, 400 300" stroke="#D4AF37" stroke-width="14" fill="none" />
 
-  <main>
-    <div id="memoryTree"></div>
-  </main>
+    <!-- Left main branch -->
+    <path d="M400 400 C320 360, 260 300, 220 220" stroke="#D4AF37" stroke-width="6" fill="none" />
+    <!-- Right main branch -->
+    <path d="M400 400 C480 360, 540 300, 580 220" stroke="#D4AF37" stroke-width="6" fill="none" />
 
-  <footer>
-    <p>Data from Maastricht University Digital Collections</p>
-  </footer>
+    <!-- Left sub-branch for Pierre Kemp -->
+    <path d="M220 220 C200 180, 160 140, 120 100" stroke="#D4AF37" stroke-width="3" fill="none" />
+    <!-- Right sub-branch for Person 1 -->
+    <path d="M580 220 C600 180, 640 140, 680 100" stroke="#D4AF37" stroke-width="3" fill="none" />
 
-  <script src="script.js?v=4"></script>
-</body>
-</html>
+    <!-- People nodes (pink) -->
+    <a href="https://digitalcollections-accept.library.maastrichtuniversity.nl/s/index/item/60513" target="_blank">
+      <circle cx="220" cy="220" r="10" fill="#FF69B4" stroke="white" stroke-width="2"></circle>
+      <text x="220" y="250" text-anchor="middle" font-family="sans-serif" font-size="14">Pierre Kemp</text>
+    </a>
+
+    <a href="https://digitalcollections-accept.library.maastrichtuniversity.nl/s/index/item/60515" target="_blank">
+      <circle cx="580" cy="220" r="10" fill="#FF69B4" stroke="white" stroke-width="2"></circle>
+      <text x="580" y="250" text-anchor="middle" font-family="sans-serif" font-size="14">Person No. 1</text>
+    </a>
+
+    <a href="https://digitalcollections-accept.library.maastrichtuniversity.nl/s/index/item/60516" target="_blank">
+      <circle cx="400" cy="300" r="10" fill="#FF69B4" stroke="white" stroke-width="2"></circle>
+      <text x="400" y="330" text-anchor="middle" font-family="sans-serif" font-size="14">Person No. 2</text>
+    </a>
+
+    <a href="https://digitalcollections-accept.library.maastrichtuniversity.nl/s/index/item/60512" target="_blank">
+      <circle cx="400" cy="230" r="10" fill="#FF69B4" stroke="white" stroke-width="2"></circle>
+      <text x="400" y="260" text-anchor="middle" font-family="sans-serif" font-size="14">Charles Eyck</text>
+    </a>
+
+    <!-- Object nodes (green leaves) -->
+    <a href="https://digitalcollections-accept.library.maastrichtuniversity.nl/s/index/item/37" target="_blank">
+      <circle cx="120" cy="100" r="8" fill="#4CAF50" stroke="white" stroke-width="1.5"></circle>
+      <text x="120" y="80" text-anchor="middle" font-family="sans-serif" font-size="13">Kemps auto</text>
+    </a>
+
+    <a href="https://digitalcollections-accept.library.maastrichtuniversity.nl/s/index/item/60517" target="_blank">
+      <circle cx="680" cy="100" r="8" fill="#4CAF50" stroke="white" stroke-width="1.5"></circle>
+      <text x="680" y="80" text-anchor="middle" font-family="sans-serif" font-size="13">Letter to Person No. 1</text>
+    </a>
+
+    <!-- Title and trunk root -->
+    <circle cx="400" cy="650" r="18" fill="#D4AF37" stroke="white" stroke-width="2"></circle>
+    <text x="400" y="685" text-anchor="middle" font-family="sans-serif" font-size="16" font-weight="bold">Digital Memory Tree</text>
+  </svg>
+</div>
+
