--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <path d="M400 400 C320 360, 260 300, 220 220" stroke="#D4AF37" stroke-width="6" fill="none" />
     <!-- Right main branch -->
     <path d="M400 400 C480 360, 540 300, 580 220" stroke="#D4AF37" stroke-width="6" fill="none" />
+    <!-- Small center branch for Charles Eyck -->
+    <path d="M400 360 C390 320, 390 280, 400 240" stroke="#D4AF37" stroke-width="5" fill="none" />
 
     <!-- Left sub-branch for Pierre Kemp -->
     <path d="M220 220 C200 180, 160 140, 120 100" stroke="#D4AF37" stroke-width="3" fill="none" />
@@ -30,8 +32,8 @@
     </a>
 
     <a href="https://digitalcollections-accept.library.maastrichtuniversity.nl/s/index/item/60512" target="_blank">
-      <circle cx="400" cy="230" r="10" fill="#FF69B4" stroke="white" stroke-width="2"></circle>
-      <text x="400" y="260" text-anchor="middle" font-family="sans-serif" font-size="14">Charles Eyck</text>
+      <circle cx="400" cy="240" r="10" fill="#FF69B4" stroke="white" stroke-width="2"></circle>
+      <text x="400" y="210" text-anchor="middle" font-family="sans-serif" font-size="14">Charles Eyck</text>
     </a>
 
     <!-- Object nodes (green leaves) -->
@@ -42,12 +44,4 @@
 
     <a href="https://digitalcollections-accept.library.maastrichtuniversity.nl/s/index/item/60517" target="_blank">
       <circle cx="680" cy="100" r="8" fill="#4CAF50" stroke="white" stroke-width="1.5"></circle>
-      <text x="680" y="80" text-anchor="middle" font-family="sans-serif" font-size="13">Letter to Person No. 1</text>
-    </a>
-
-    <!-- Title and trunk root -->
-    <circle cx="400" cy="650" r="18" fill="#D4AF37" stroke="white" stroke-width="2"></circle>
-    <text x="400" y="685" text-anchor="middle" font-family="sans-serif" font-size="16" font-weight="bold">Digital Memory Tree</text>
-  </svg>
-</div>
-
+      <text x="680" y="80" text-anchor="middle" f
